--- a/front/package.json
+++ b/front/package.json
@@ -5,7 +5,8 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "type-check": "tsc"
+    "type-check": "tsc",
+    "vercel-build": "npm run build"
   },
   "dependencies": {
     "@material-ui/core": "^4.11.4",
