--- a/front/package.json
+++ b/front/package.json
@@ -9,21 +9,21 @@
     "vercel-build": "npm run build"
   },
   "dependencies": {
-    "@material-ui/core": "^4.11.4",
-    "axios": "^0.21.1",
+    "@material-ui/core": "^4.12.3",
+    "axios": "^0.24.0",
     "http-proxy": "^1.18.1",
-    "next": "latest",
-    "next-auth": "^3.19.5",
+    "next": "^12.0.7",
+    "next-auth": "^4.0.5",
     "nookies": "^2.5.2",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "swr": "^0.5.5"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "swr": "^1.1.1"
   },
   "devDependencies": {
-    "@types/node": "^12.12.21",
-    "@types/react": "^17.0.2",
-    "@types/react-dom": "^17.0.1",
-    "typescript": "4.0"
+    "@types/node": "^17.0.0",
+    "@types/react": "^17.0.37",
+    "@types/react-dom": "^17.0.11",
+    "typescript": "4.5"
   },
   "license": "MIT"
 }
